--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-    "name": "samplesite",
-    "version": "1.0.0",
-    "description": "demostrate a website built on nodejs with express",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Learn365/SampleSite_nodejs.git"
-    },
-    "keywords": [
-        "nodejs",
-        "express"
-    ],
-    "author": "Baikang wang",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Learn365/SampleSite_nodejs/issues"
-    },
-    "homepage": "https://github.com/Learn365/SampleSite_nodejs#readme",
-    "dependencies": {
-        "ejs": "^2.5.6",
-        "express": "^4.15.2",
-        "path-to-regexp": "^1.7.0"
-    }
+  "name": "samplesite",
+  "version": "1.0.0",
+  "description": "demostrate a website built on nodejs with express",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Learn365/SampleSite_nodejs.git"
+  },
+  "keywords": [
+    "nodejs",
+    "express"
+  ],
+  "author": "Baikang wang",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Learn365/SampleSite_nodejs/issues"
+  },
+  "homepage": "https://github.com/Learn365/SampleSite_nodejs#readme",
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
+    "express-formidable": "^1.0.0",
+    "path-to-regexp": "^1.7.0"
+  }
 }
