--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/Learn365/SampleSite_nodejs#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-formidable": "^1.0.0",
+    "express-session": "^1.15.2",
     "path-to-regexp": "^1.7.0"
   }
 }
